fix: truncate extra username

--- a/frontend/src/components/AdminDashboard/PostReportList.css
+++ b/frontend/src/components/AdminDashboard/PostReportList.css
@@ -246,5 +246,12 @@
     transform: translate(-50%, -50%);
   }
 }
+  
+.user-name {
+  max-width: 150px; 
+  white-space: nowrap; /* Prevent text wrapping */
+  overflow: hidden; 
+  text-overflow: ellipsis; /* Add "..." to indicate overflow */
+}
 
   
